fixed nav-links touch area on mobile

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -26,6 +26,7 @@ nav {
 
         a {
             color: $text-color;
+            display: block;
         }
     }
 
